--- a/index.html
+++ b/index.html
@@ -6,9 +6,31 @@
 
 </head>
 <body>
+    <center>
+<h2>Please try out my test form!</h2>
 
-
-
+<table style="border: 2px solid black;">
+<form action:"mailto:ljd518912@gnspes.ca?subject=From%20our%20Website" method="post" enctype="text/plain">
+<label for="First name">First name:</label><br>
+<input type="text"  name="first name" minlengh="2" required="required"><br>
+<label for="Last name">Last name:</label><br>
+<input type="text"  name="Last name" required="required"><br>
+<label for="Email">E-Mail:</label><br>
+<input type="email" name="Email" required="required"><br>
+<label for="Age">Age:</label><br>
+<input type="number" name="Age" minlength="16"><br>
+<label for="Birthdate">Birthdate:</label><br>
+<input type="date"  name="birthdate" required="required"><br>
+<label for="City">City:</label><br>
+<input type="text" name="City" minlength="2"><br>
+<label for="Phone number">Phone number:</label><br>
+<input type="tel"  name="Phone number" required='required'><br><br>
+<input type="Submit" value="Submit"><input type="reset" value="reset"><br><br>
+<label for="Do you want to receive E-Mail notifications?">Do you want to receive E-Mail notifications?</label>
+<input type="checkbox" id="Yes" name="Yes"><br>
+</form>
+</table>
+</center>
 
 
 
