--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
 </head>
 <body>
     <center>
-<h2>Please try out my test form!</h2>
 
-<table style="border: 2px solid black;">
-<form action:"mailto:ljd518912@gnspes.ca?subject=From%20our%20Website" method="post" enctype="text/plain">
-<label for="First name">First name:</label><br>
+
+<table style="border: 2px solid black; background-color:aquamarine;">
+<form action:"mailto:ljd518912@gnspes.ca?subject=form" method="POST" enctype="text/plain">
+    <tr>
+        <td>
+        <h1>Please try out my test form!</h1>
+    </td>
+    </tr>
+  
+    <td>
+    <label for="First name">First name:</label><br>
 <input type="text" name="firstname" minlengh="2" required="required"><br>
 <label for="Last name">Last name:</label><br>
 <input type="text" name="Lastname" required="required"><br>
@@ -24,11 +31,14 @@
 <label for="City">City:</label><br>
 <input type="text" name="City" minlength="2"><br>
 <label for="Phone number">Phone number:</label><br>
-<input type="tel"  name="Phone number" required='required'><br><br>
+<input type="tel"  name="Phone number" required='required'><br>
+<label for="favorite color">Favorite color:</label><br>
+<input type="color" name="color"><br><br>
 <input type="Submit" value="Submit"><input type="reset" value="reset"><br><br>
 <label for="Do you want to receive E-Mail notifications?">Do you want to receive E-Mail notifications?</label>
 <input type="checkbox" id="Yes" name="Yes"><br>
 </form>
+</td>
 </table>
 </center>
 
