--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 <label for="Last name">Last name:</label><br>
 <input type="text" name="Lastname" required="required"><br>
 <label for="Email">E-Mail:</label><br>
-<input type="email" name="Email" required="required"><br>
+<input type="email" name="Email" placeholder="Ex. placeholder@gmail.com" required="required"><br>
 <label for="Age">Age:</label><br>
-<input type="number" name="Age" minvalue="16"><br>
+<input type="number" name="Age" minvalue="16" ><br>
 <label for="Birthdate">Birthdate:</label><br>
 <input type="date"  name="birthdate" required="required"><br>
 <label for="City">City:</label><br>
 <input type="text" name="City" minlength="2"><br>
 <label for="Phone number">Phone number:</label><br>
-<input type="tel"  name="Phone number" required='required'><br>
+<input type="tel"  name="Phone number" placeholder="Ex: 902-___-___" required="required"><br>
 <label for="favorite color">Favorite color:</label><br>
 <input type="color" name="color"><br><br>
 <input type="Submit" value="Submit"><input type="reset" value="reset"><br><br>
