--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <table style="border: 2px solid black; background-color:aquamarine;">
-<form action:"mailto:ljd518912@gnspes.ca?subject=form" method="POST" enctype="text/plain">
+<form action="mailto:ljd518912@gnspes.ca?subject=form" method="post" enctype="text/plain">
     <tr>
         <td>
         <h1>Please try out my test form!</h1>
