--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
 <head>
 <title>Day9-JM</title>
 
-
+<link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <center>
 
+<style>
+.h1 {
+text-decoration:bold;
 
+}
+
+</style>
 <table style="border: 2px solid black; background-color:aquamarine;">
 <form action="mailto:ljd518912@gnspes.ca?subject=form" method="get" enctype="text/plain">
-    <tr>
-        <td>
-        <h1>Please try out my test form!</h1>
+    <tr style="border: 1px solid black;">
+        <td style="border-bottom: 2px solid black;">
+        <h1 class="h1">Please try out my test form!</h1>
     </td>
     </tr>
-  
+  <tr>
     <td>
     <label for="First name">First name:</label><br>
 <input type="text" name="firstname" minlengh="5" required="required"><br>
@@ -30,15 +36,28 @@
 <input type="date"  name="birthdate" required="required"><br>
 <label for="City">City:</label><br>
 <input type="text" name="City" minlength="2"><br>
+<label for="Postal code">Postal code:</label><br>
+<input type="text" name="postal code" minlengh="6" placeholder="Ex.B3K-2Z1"><br>
 <label for="Phone number">Phone number:</label><br>
-<input type="tel"  name="Phone number" placeholder="Ex: 902-___-___" required="required"><br>
+<input type="tel"  name="Phone number" placeholder="Ex: 902-___-___" required="required"> <br>
 <label for="favorite color">Favorite color:</label><br>
 <input type="color" name="color"><br><br>
 <input type="Submit" value="Submit"><input type="reset" value="reset"><br><br>
 <label for="Do you want to receive E-Mail notifications?">Do you want to receive E-Mail notifications?</label>
-<input type="checkbox" id="Yes" name="Yes"><br>
-</form>
+<input type="checkbox" id="Yes" name="Yes"><br><br>
+<label for="How is my form?">What would you rate my form?</label><br>
+<input type="range" minlength="1" maxlength="10"><br>
+
+    </form>
 </td>
+</tr>
+<tr>
+<td style="border-top:2px solid black;">
+    <center>
+<cite>Created by Jackson</cite>
+</center>
+</td>
+</tr>
 </table>
 </center>
 
