--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <title>Day9-JM</title>
-
+<!--Auther: Jackson Murray
+    Last edited: 07/15/21-->
 <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
@@ -34,6 +35,25 @@ text-decoration:bold;
 <input type="number" name="Age" minvalue="17" ><br>
 <label for="Birthdate">Birthdate:</label><br>
 <input type="date"  name="birthdate" required="required"><br>
+<label for="Provinces and Territories">Province/territory:</label><br>
+<select id="Province/Territory" name="Province/Territory">
+<option value="Alberta">Alberta</option>
+<option value="British Columbia">British Columbia</option>
+<option value="Manitoba">Manitoba</option>
+<option value="New Brunswick">New Brunswick</option>
+<option value="Newfoundland and Labrador">Newfoundland and Labrador</option>
+<option value="Nova Scotia">Nova Scotia</option>
+<option value="Ontario">Ontario</option>
+<option value="Prince Edward Island">Prince Edward Island</option>
+<option value="Quebec">Quebec</option>
+<option value="Saskathewan">Saskathewan</option>
+<option value="Northwest Territories">Northwest Territories</option>
+<option value="Nunavut">Nunavut</option>
+<option value="Yukon">Yukon</option>
+</select>
+<br>
+
+
 <label for="City">City:</label><br>
 <input type="text" name="City" minlength="2"><br>
 <label for="Postal code">Postal code:</label><br>
