--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ text-decoration:bold;
 }
 
 </style>
-<table style="border: 2px solid black; background-color:aquamarine;">
+<table class="table1">
 <form action="mailto:ljd518912@gnspes.ca?subject=form" method="get" enctype="text/plain">
-    <tr style="border: 1px solid black;">
+    <tr class="tr1" style="border: 1px solid black;">
         <td style="border-bottom: 2px solid black;">
         <h1 class="h1">Please try out my test form!</h1>
     </td>
@@ -72,7 +72,7 @@ text-decoration:bold;
 </td>
 </tr>
 <tr>
-<td style="border-top:2px solid black;">
+<td class="td1">
     <center>
 <cite>Created by Jackson</cite>
 </center>
